force-app/main/default/objects/Error_Notification__e/Error_Notification__e.object-meta.xml
<CustomObject>
    <description>Platform event for real-time flow error notifications to administrators</description>
    <label>Error Notification</label>
    <pluralLabel>Error Notifications</pluralLabel>
</CustomObject>