force-app/main/default/objects/Error_Notification__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>BRD Error Handling: Contains the detailed error message text from succession workflow failures. This field captures the error summary for platform events generated during DAF Account Succession Management processes. Used by administrators to diagnose and resolve issues in succession automation flows.</description>
    <inlineHelpText>System-generated error message. Review this text to understand what went wrong in the succession workflow. Contact your administrator if this error persists.</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>