force-app/main/default/objects/Error_Notification__e/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>BRD Error Handling: Identifies the specific Flow or Process Builder that generated the error during succession workflow execution. This field helps administrators trace errors back to their source within the DAF Account Succession Management automation framework.</description>
    <inlineHelpText>The name of the automation flow where the error occurred. Use this to identify which succession workflow phase encountered an issue.</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>