force-app/main/default/objects/Error_Notification__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>BRD Error Handling: Stores the Salesforce record ID of the Account, Case, or related object that encountered an error during succession processing. This field provides context for debugging succession workflow failures by linking the error to specific donor accounts or succession cases.</description>
    <inlineHelpText>The ID of the record that caused the error. Click to navigate to the affected account or succession case for troubleshooting.</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>