force-app/main/default/objects/Error_Notification__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>BRD Error Handling: Classifies the error severity level for succession workflow failures. Values include Critical (blocks succession processing), High (requires immediate attention), Medium (impacts functionality), and Low (informational). Used to prioritize error resolution in DAF Account Succession Management processes.</description>
    <inlineHelpText>Error priority level: Critical = Succession process blocked, High = Immediate action required, Medium = Review within 24 hours, Low = Informational only.</inlineHelpText>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>